# swift-insight-2

ai-chat-app/: package-lock.json  package.json
ai-chat-app/src/: App.jsx  main.jsx
ai-chat-app/src/components/: ChatApp.jsx
mcp_api/: conversation_77726486-661d-4fb6-8a77-c66b879df720.pkl  conversation_80794cd5-ca7b-41c6-9500-505e0b2543ef.pkl
mcp_api/app/: main.py
mcp_api/app/api/routes/: evaluate.py  hello.py
mcp_api/app/core/: config.py
mcp_api/app/models/: base.py
mcp_api/filesystem_example/: .env  mcp_file_server.py  package-lock.json  prac.py  prac2.py  pyproject.toml  react-agent.py
mcp_api/filesystem_example/sample_files/: Attendance-column-descriptions - Student-Schema.csv  Attendance-column-descriptions - Teacher-schema.csv  school_admin_and_infrastructure_details.csv  student-examples.txt  student-instructions.txt
